# Avy-Dawgs

./: .gitignore  .gitmodules  README.md
RF_Frontend_Amplifiers/: Biased_NType_JFET_Discrete_Amplifier_Design.asc  Discrete_VCA_NMOS.asc  MAX40079_Frontend.asc  MAX40079_JFET_VCA_design.asc  NType_Discrete_JFET_Amplifier_Design.asc  PType_JFET_Discrete_VCA_design.asc  TL084_Two_Stage_Amplifier.asc
ad2/: beacon_pulse.py  beacon_simulation.py  sim_beacon.py
beaconTracking/: guidance.c  guidance.h  handheld_guidance.asv  handheld_guidance.m  magneticfield.m
beaconTracking/Guidance Test/Inc/: guidance.h
beaconTracking/Guidance Test/Src/: guidance.c
beaconTracking/GuidanceTest/: Makefile
beaconTracking/GuidanceTest/Inc/: circ_buf.h  guidance.h
beaconTracking/GuidanceTest/Src/: circ_buf.c  guidance.c
beaconTracking/GuidanceTest/tests/: guidance_test.c
fpga/hdl/: XADC_PmodDA2_top.sv  clk_div.sv  edge_detect.sv  idx_to_qsin_addr.sv  mixer_iq.sv  mixer_test.sv  qsin_lut_2p.sv  qsin_to_sin.sv  signal_path.sv  sin_osc_iq.sv  top.sv  xadc_wrapper.sv
mcu/: README.md
mcu/BuitinADC_test/: CMakeLists.txt  NUCLEO-STM32F722ZE_Template.ioc
mcu/BuitinADC_test/Inc/: adc.h  circ_buf.h  constants.h  dsp.h  dwt.h  globals.h  guidance.h  led.h  main.h  stm32f7xx_hal_conf.h
mcu/BuitinADC_test/Src/: UART.c  adc.c  app_main.c  dsp.c  guidance.c  led.c  main.c  stm32f7xx_it.c
mcu/BuitinADC_test/cmake/stm32cube/: CMakeLists.txt
mcu/ExternalADC/: CMakeLists.txt
mcu/ExternalADC/Inc/: ExtADC.h  UART.h  constants.h  dsp.h  globals.h  led.h
mcu/ExternalADC/Src/: ExtADC.c  app_main.c  stm32f7xx_it.c
mcu/ExternalADC/cmake/stm32cube/: CMakeLists.txt
mcu/NUCLEO-F722ZE_test/: CubeMX.cbuild-pack.yml  vcpkg-configuration.json
mcu/NUCLEO-F722ZE_test/RTE/Device/STM32F722ZETx/: regions_STM32F722ZETx.h
mcu/NUCLEO-F722ZE_test/STM32CubeMX/STM32F722ZETx/MX_Device/: MX_Device.h
mcu/NUCLEO-F722ZE_test/STM32CubeMX/STM32F722ZETx/STM32CubeMX/: .mxproject  STM32CubeMX.ioc
mcu/NUCLEO-F722ZE_test/STM32CubeMX/STM32F722ZETx/STM32CubeMX/MDK-ARM/: STM32CubeMX.uvoptx  startup_stm32f722xx.s
mcu/NUCLEO-F722ZE_test/STM32CubeMX/STM32F722ZETx/STM32CubeMX/Src/: main.c
mcu/NUCLEO-STM32F722ZE_Template/: CMakeLists.txt
mcu/NUCLEO-STM32F722ZE_Template/cmake/: gcc-arm-none-eabi.cmake
mcu/NUCLEO-STM32F722ZE_Template/cmake/stm32cube/: CMakeLists.txt
mcu/NUCLEO_Test/: CubeMX.cbuild-pack.yml  CubeMX.cproject.yml  CubeMX.csolution.yml
mcu/NUCLEO_Test/RTE/_Debug_STM32F722ZETx/: RTE_Components.h
mcu/NUCLEO_Test/STM32CubeMX/STM32F722ZETx/: CubeMX.cgen.yml  project.script
mcu/NUCLEO_Test/STM32CubeMX/STM32F722ZETx/MX_Device/: MX_Device.h
mcu/NUCLEO_Test/STM32CubeMX/STM32F722ZETx/STM32CubeMX/MDK-ARM/: STM32CubeMX.uvprojx
mcu/NUCLEO_Test/STM32CubeMX/STM32F722ZETx/STM32CubeMX/Src/: main.c
mcu/UART_Test/: CMakeLists.txt
mcu/UART_Test/Inc/: UART.h  main.h
mcu/UART_Test/Src/: UART.c  main.c  stm32f7xx_hal_msp.c
mcu/UART_Test/cmake/stm32cube/: CMakeLists.txt
pcb/ReceiverProto_kicad/: ADC.kicad_sym  LDO_Regulator.kicad_sym  Op-Amp.kicad_sym  ReceiverProto.kicad_pcb  ReceiverProto.kicad_pro  ReceiverProto.kicad_sch  Voltate_Converter.kicad_sym  _autosave-frontend.kicad_sch  adc.kicad_sch  antenna.kicad_sym  fp-lib-table  frontend.kicad_sch  io.kicad_sch  power.kicad_sch  simulation.kicad_sch  sym-lib-table
pcb/ReceiverProto_kicad/LDO_Regulator.pretty/: UJ-5_ADI.kicad_mod
pcb/ReceiverProto_kicad/OpAmp.pretty/: RJ_6_ADI.kicad_mod
pcb/ReceiverProto_kicad/SMD_Passives.pretty/: YAG_R0201_YAG.kicad_mod  YAG_R0201_YAG_100.kicad_mod  YAG_R0201_YAG_33.kicad_mod
pcb/ReceiverProto_kicad/SMD_SCHOTTKY_DIODE.pretty/: SOD323_DIO.kicad_mod
pcb/ReceiverProto_kicad/Voltage_Converter.pretty/: R_8_ADI.kicad_mod
pcb/ReceiverProto_kicad/Voltage_Regulator.pretty/: DBV5_TEX.kicad_mod  DBV6.kicad_mod
pcb/ReceiverProto_kicad/adc.pretty/: CP-16-45_ADI.kicad_mod
pcb/spice_libraries/MAX400xx  Op-Amp/: max40079.lib
scripts/: gen-flattop.py
